@@ -176,8 +176,7 @@
                     <argLine>
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
-                        --add-opens com.google.api.client.auth.oauth2=ALL-UNNAMED
-                        --add-opens com.google.api.client.googleapis.auth.oauth2=ALL-UNNAMED
+
                     </argLine>
                 </configuration>
             </plugin>
